fix background jumping (#419)

--- a/app/assets/stylesheets/pages/shop/_order.scss
+++ b/app/assets/stylesheets/pages/shop/_order.scss
@@ -13,8 +13,7 @@
   }
 
   &__content {
-    background: var(--color-bg) url("landing/hero/hero-bg.webp") repeat center
-      center / 1200px;
+    background: var(--color-bg) url("landing/hero/hero-bg.webp");
     padding: 2em;
     border-radius: 2em;
     width: 90%;
